tests/ui/macros/macro-rules-as-derive-or-attr-issue-132928.stderr
error: cannot find derive macro `sample` in this scope
  --> $DIR/macro-rules-as-derive-or-attr-issue-132928.rs:6:10
   |
LL | macro_rules! sample { () => {} }
   |              ------ `sample` exists, but a declarative macro cannot be used as a derive macro
...
LL | #[derive(sample)]
   |          ^^^^^^

error: cannot find attribute `sample` in this scope
  --> $DIR/macro-rules-as-derive-or-attr-issue-132928.rs:5:3
   |
LL | macro_rules! sample { () => {} }
   |              ------ `sample` exists, but a declarative macro cannot be used as an attribute macro
LL |
LL | #[sample]
   |   ^^^^^^

error: cannot find derive macro `sample` in this scope
  --> $DIR/macro-rules-as-derive-or-attr-issue-132928.rs:6:10
   |
LL | macro_rules! sample { () => {} }
   |              ------ `sample` exists, but a declarative macro cannot be used as a derive macro
...
LL | #[derive(sample)]
   |          ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: cannot find derive macro `sample` in this scope
  --> $DIR/macro-rules-as-derive-or-attr-issue-132928.rs:6:10
   |
LL | macro_rules! sample { () => {} }
   |              ------ `sample` exists, but a declarative macro cannot be used as a derive macro
...
LL | #[derive(sample)]
   |          ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

